            - added 'logcacheremoveunused' command to remove old no longer used tables
          - Panorama
            - make tabs reorderable
            - fixed problem on initializing pie charts
            - fixed import problem not showing initial panels
          - Business Process
            - change service plugin output for first node
            - add livestatus result transport
            - fixed displaying/using wrong host template
          - Reports
            - show out of scope totals
            - added report description on cover page
            - support outages pages for multiple host/service reports
            - fill in defaults for host/service unavailable states when switching report templates
            - use timeperiods when calculation outage logs
            - fixed livestatus timestamp for timeperiod transitions
            - fixed pnp graphs in reports when using remote instances and services containing spaces
            - fixed problem with daylight saving times
            - fixed selecting wrong tab on rescheduling report
            - fixed removing reports from non-existing templates
          - Config Tool
            - fixed parsing lists in host/serviceescalations
          - Bug Fixes
            - fixed init script which did not stop/restart are fcgi processes
            - fixed displaying performance data with negative ranges
            - fixed duplicate bookmark handling

1.80-3   Sat Dec  7 18:26:15 CET 2013
          - optional guest account when using cookie authentication
          - made report_max_objects configurable
          - Bug Fixes
            - fixed sorting on keys with space in performance data table
            - fixed using negative numbers in performance data table
            - fixed cookie auth on https url when using https backend over proxy
            - fixed js error on reports page
            - fixed js error on panorama dashboad: Cannot call method 'getSize' of undefined
