@@ -178,7 +178,8 @@ script has the following arguments
       - uninstallcron               remove all thruk cronjobs
                                     (only needed during package deinstallation)
       - compile                     compile templates for faster access
-      - bpd                         start business process daemon
+      - bp/bpd(=nr)                 calculate all/specified business process(es)
+      - bpcommit                    write objects for business processes and reloads core
 
     Testing Commands
       - listbackends                list all backends
